# ECS-Test

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/ECS-SFML/Accessors/: AccessorTypes.h
src/ECS-SFML/Components/: BoundsComponent.cpp  BoundsComponent.h  RenderSpriteComponent.cpp  RenderSpriteComponent.h  ScreenWrapComponent.cpp  ScreenWrapComponent.h  SpriteComponent.cpp  SpriteComponent.h  TimerComponent.cpp  TimerComponent.h  Transform.cpp  Transform.h  TransformComponent.cpp  TransformComponent.h  VelocityComponent.cpp  VelocityComponent.h
src/ECS-SFML/Managers/: ResourceManager.cpp  ResourceManager.h
src/ECS-SFML/Systems/: CollisionSystem.cpp  CollisionSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  TimerSystem.cpp  TimerSystem.h  TransformSystem.cpp  TransformSystem.h
src/ECS-SFML/Worlds/: SFMLWorld.cpp  SFMLWorld.h  SFMLWorldContext.h
src/ECS/Accessors/: ComponentAccessor.h  DepthAccessor.cpp  DepthAccessor.h  IComponentAccessor.h
src/ECS/Components/: CollisionComponent.cpp  CollisionComponent.h  ComponentManager.cpp  ComponentManager.h  ComponentSettings.h  DepthComponent.h  IComponent.cpp  IComponent.h  TreeComponent.cpp  TreeComponent.h
src/ECS/Controllers/: ComponentController.cpp  ComponentController.h  IComponentController.h
src/ECS/Entities/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/ECS/Managers/: AccessorManager.cpp  AccessorManager.h  ControllerManager.cpp  ControllerManager.h  EntityManager.cpp  EntityManager.h  RenderManager.cpp  RenderManager.h
src/ECS/States/: State.cpp  State.h
src/ECS/Systems/: ISystem.cpp  ISystem.h  SystemManager.cpp  SystemManager.h
src/ECS/Worlds/: World.cpp  World.h  WorldContext.h  WorldSettings.h
src/TestGame/Worlds/: TestGameWorld.cpp  TestGameWorld.h
